# arrow-non-cpu

./: .gitignore  4stock_5day.csv  CMakeLists.txt  README.md  demo.py  events.py  ffi_headers.py
src/: abi.h  helpers.h  main.cc  to_arrow_device_array.cc
